// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Configure clan instructions Sets the description 1`] = `
{
  "data": [
    87,
    204,
    33,
    181,
    26,
    229,
    252,
    151,
    16,
    0,
    0,
    0,
    78,
    111,
    32,
    109,
    111,
    114,
    101,
    32,
    109,
    97,
    114,
    105,
    110,
    97,
    100,
    101,
  ],
  "keys": [
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "4vK9oDnDgPbFGtCwdJvm3hHay9EueHDxJfNoSZMnQEZw",
    },
    {
      "isSigner": true,
      "isWritable": false,
      "pubkey": "4NGov9AUKpbbkQU9AaS5ZqhEEzgWG3MSZrziDsLuWQBa",
    },
  ],
  "programId": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
}
`;

exports[`Configure clan instructions Sets the name 1`] = `
{
  "data": [
    197,
    215,
    183,
    186,
    71,
    46,
    171,
    101,
    4,
    0,
    0,
    0,
    76,
    73,
    68,
    79,
  ],
  "keys": [
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "4vK9oDnDgPbFGtCwdJvm3hHay9EueHDxJfNoSZMnQEZw",
    },
    {
      "isSigner": true,
      "isWritable": false,
      "pubkey": "4NGov9AUKpbbkQU9AaS5ZqhEEzgWG3MSZrziDsLuWQBa",
    },
  ],
  "programId": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
}
`;
